--- a/src/utility/Navbar/Navbar.css
+++ b/src/utility/Navbar/Navbar.css
@@ -12,6 +12,7 @@
 .nav ul li{
     color: white;
     cursor: pointer;
+    margin: 5px;
 }
 
 
@@ -28,3 +29,4 @@
     border-bottom: 2px solid white;
     background-color: initial;    
 }
+ 
