Login component updated

--- a/src/utility/Navbar/Navbar.css
+++ b/src/utility/Navbar/Navbar.css
@@ -12,7 +12,10 @@
 .nav ul li{
     color: white;
     cursor: pointer;
-    margin: 5px;
+}
+
+.nav ul li.login-signup{
+     margin-right: 15px;
 }
 
 
